# FilePilot

./: .gitignore  CONFIGURATION.md  Cargo.toml  FEATURES.md  README.md  build-all.sh  install.sh
src/: config.json  config.rs  file_sharing.rs  file_system.rs  main.rs  search.rs  ui.rs
