[package]
name = "filepilot"
version = "0.4.0"
edition = "2021"
description = "A file explorer with system-wide search capabilities"
license = "GPL-3.0"
authors = ["Nikhil Singh"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
walkdir = "2.3"
regex = "1.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.27"
ratatui = "0.24"
ignore = "0.4"
rayon = "1.7"
fuzzy-matcher = "0.3"
open = "5.0"
warp = "0.3"
tokio-util = { version = "0.7", features = ["io"] }
arboard = "3.2"
local-ip-address = "0.5"
uuid = { version = "1.0", features = ["v4"] }
csv = "1.3"
calamine = "0.24"
reqwest = { version = "0.11", features = ["json"] }
qrcode = "0.14"
image = "0.25"
base64 = "0.22"
